# GUI-practice

./: README.md  functie_plotter.py  gui_test.py  plotter_app.ui  pyproject.toml  simple_add.ui  simple_app.ui  ui_simple_app.py
src/functie_plotter/: functie_plotter.py
test/: gui_ui_test.py
