[tool.poetry]
name = "functie_plotter"
version = "0.1.0"
description = ""
authors = ["Kevin-Veenboer <135600479+Kevin-Veenboer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "^6.6.0"
pyqtgraph = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
